--- a/TimetableOfClasses/TimetableOfClasses.csproj
+++ b/TimetableOfClasses/TimetableOfClasses.csproj
@@ -44,23 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Groups.cs">
+    <Compile Include="AddTeacher.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Groups.Designer.cs">
-      <DependentUpon>Groups.cs</DependentUpon>
+    <Compile Include="AddTeacher.Designer.cs">
+      <DependentUpon>AddTeacher.cs</DependentUpon>
     </Compile>
     <Compile Include="Discipline.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Discipline.Designer.cs">
       <DependentUpon>Discipline.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Auditor.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Auditor.Designer.cs">
-      <DependentUpon>Auditor.cs</DependentUpon>
     </Compile>
     <Compile Include="Start.cs">
       <SubType>Form</SubType>
@@ -76,14 +70,11 @@
     <Compile Include="Teachers.Designer.cs">
       <DependentUpon>Teachers.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Groups.resx">
-      <DependentUpon>Groups.cs</DependentUpon>
+    <EmbeddedResource Include="AddTeacher.resx">
+      <DependentUpon>AddTeacher.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Discipline.resx">
       <DependentUpon>Discipline.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Auditor.resx">
-      <DependentUpon>Auditor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Start.resx">
       <DependentUpon>Start.cs</DependentUpon>
